Bug 412371 - Error while creating archives from remote folders
Summary: Error while creating archives from remote folders
Status: RESOLVED FIXED
Alias: None
Product: krusader
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.7.2
Platform: openSUSE Linux
: NOR major
Target Milestone: ---
Assignee: Krusader Bugs Distribution List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-09-26 16:29 UTC by Rafael Linux User
Modified: 2020-01-27 14:05 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Rafael Linux User 2019-09-26 16:29:42 UTC
SUMMARY
Trying to create archives to LOCAL folder from REMOTE host with ftp, fish (as remote root user) or even smb protocol, always ends in error just starting compression. I tried archive formats as ".tar.gz" , "tar.xz", "7z" and even "zip", but all processes ends with "Wrong URL format /tmp/krusader-xyxyxyxyx" (where xyxyxyx is a serie of characters distinct).

STEPS TO REPRODUCE
1. Open Krusader with two panels
2. In left panel, open local folder
3. In right panel, select a remote folder and click on "File, Archive" (Alt+Shift+P)
4. Select "tar.xz" as compression method

OBSERVED RESULT
- Desktop system notifies "Dowloading remote files failed: /tmp/krusader-xyxyxyxyx"
- Krusader shows an error window "Wrong URL format /tmp/krusader-xyxyxyxyx"

EXPECTED RESULT
To have an archive in Krusader left folder

SOFTWARE/OS VERSIONS
OpenSUSE 15.0
KDE Frameworks 5.45.0
Qt 5.9.4 (compilado con 5.9.4)
El sistema de ventanas xcb

ADDITIONAL INFORMATION
I can create LOCAL archives from local folders without any issue.
I can create any kind of archive without any issue.
Comment 1 Alex Bikadorov 2019-10-20 16:55:57 UTC
Same cause as Bug 410717.
Proposed patch: https://phabricator.kde.org/D24809
Comment 2 Alex Bikadorov 2020-01-27 14:05:05 UTC
Git commit 3195a0d829919f9ec8be0f3a80837b30de38e89f by Alexander Bikadorov.
Committed on 27/01/2020 at 14:04.
Pushed by abikadorov into branch 'master'.

Archive: Fix invalid destination URL when packing/unpacking from remote location

FIXED: [412371] Error while creating archives from remote folders
Related: bug 410717
FIXED: [410717] Unpacking archives from a remote location (FTP, SMB, ...) ends up with 'Malformed URL /tmp/krusader-xxxx' message

Differential Revision: https://phabricator.kde.org/D24809

M  +1    -1    krusader/Archive/abstractthreadedjob.cpp

https://commits.kde.org/krusader/3195a0d829919f9ec8be0f3a80837b30de38e89f