Archive: Fix invalid destination URL when packing/unpacking from remote location

FIXED: [412371] Error while creating archives from remote folders
BUG: 412371
FIXED: [410717] Unpacking archives from a remote location (FTP, SMB, ...) ends up with 'Malformed URL /tmp/krusader-xxxx' message
BUG: 410717

Differential Revision: https://phabricator.kde.org/D24809